<resources>
    <string name="app_name">BusBooking</string>
    <string name="help">Help</string>
    <string name="bookings">Bookings</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AccountFragment">AccountFragment</string>
    <string name="bookingsFragment">BookingsFragment</string>
    <string name="helpFragment">HelpFragment</string>
    <string name="homeFragment">HomeFragment</string>
    <string name="bus_tickets">BUS TICKETS</string>
    <string name="enter_source">ENTER SOURCE</string>
    <string name="enter_destination">ENTER DESTINATION</string>
    <string name="search_buses">SEARCH BUSES</string>
    <string name="destination_image">Destination Image</string>
    <string name="source_image">Source Image</string>
    <string name="logo_image">Logo Image</string>
    <string name="reverseSourceAndDestination">reverseSourceAndDestination</string>
    <string name="today">TODAY</string>
    <string name="tomorrow">TOMORROW</string>
    <string name="ok">OK</string>
    <string name="boarding_points_you_prefer">BOARDING POINTS YOU PREFER</string>
    <string name="tripLocationArea">tripLocationArea</string>
    <string name="app_top_bar_search">App Top Bar Search</string>
    <string name="app_top_bar_back">App Top Bar back</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="Account">Account</string>
    <string name="destination_points_you_prefer">Destination Points You Prefer</string>
    <string name="enter_date">ENTER DATE</string>
    <string name="hurry_buses_on_this_route_are_filling_up_fast">Hurry! Buses on this route are filling up fast</string>
    <string name="boardingTime">StartTime - </string>
    <string name="landingTime">LandingTime</string>
    <string name="_650">₹ 650</string>
    <string name="bus_name">BUS NAME</string>
    <string name="_4_2">4.2</string>
    <string name="star">*</string>
    <string name="ac_sleeper_2_1">AC Sleeper (2+1)</string>
    <string name="srs_travels">SRS Travelss</string>
    <string name="date">Fri, 23 Jun</string>
    <string name="boardingArea">Chennai - </string>
    <string name="droppingArea">Madurai</string>
    <string name="steeringImage">steeringImage</string>
    <string name="drag_to_know_about_seat_types">Drag To Know About Seat Types</string>
    <string name="seaterbeforeclick">seaterbeforeclick</string>
    <string name="seaterbooked">seaterbooked</string>
    <string name="seaterselected">seaterselected</string>
    <string name="sleeperbeforeclick">sleeperbeforeclick</string>
    <string name="sleeperbooked">sleeperbooked</string>
    <string name="sleeperselected">sleeperSelected</string>
    <string name="_1">1</string>
    <string name="navigate_next">NavigateNext</string>
    <string name="proceed">Proceed</string>
    <string name="primary_passenger_details">Primary Passenger</string>
    <string name="co_passenger_details">Co-Passenger</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="passenger_information">Passenger Information</string>
    <string name="gender">Gender</string>
    <string name="submit">Submit</string>
    <string name="bookseats">BookSeats</string>
    <string name="primary_passenger">Passenger Details</string>
    <string name="seatNumber">SEATNUMBER</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="age">Age</string>
    <string name="upcoming_bus_travels">UpComing Bus Travels</string>
    <string name="confirmed">confirmed</string>
    <string name="available">Available Seater</string>
    <string name="booked_seater">Booked Seater</string>
    <string name="selected_seater">Selected Seater</string>
    <string name="available_sleeper">Available Sleeper</string>
    <string name="booked_sleeper">Booked Sleeper</string>
    <string name="selected_sleeper">Selected Sleeper</string>
    <string name="select">Select</string>
    <string name="seat_types">Seat Types</string>
</resources>