<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/marginStart"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginStart">

        <TextView
            android:id="@+id/boardingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/boardingTime"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/droppingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/boardingTime"
            android:text="@string/landingTime"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tripFare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:text="@string/_650"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/marginStart">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/logo_image"
            android:src="@drawable/baseline_directions_bus_24"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/busName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/logoImage"
            android:fontFamily="sans-serif-medium"
            android:text="@string/bus_name"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:background="@color/green">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/star"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize"/>

            <Button
                android:id="@+id/busRating"
                android:layout_width="35dp"
                android:layout_height="20dp"
                android:text="@string/_4_2"
                android:textColor="@color/white"
                android:background="@android:color/transparent"/>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/busTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ac_sleeper_2_1"
        android:textStyle="italic"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
</LinearLayout>

