<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/marginStart"
    app:cardCornerRadius="@dimen/marginStart">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginStart"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_directions_bus_24"
                    app:tint="@color/black"
                    android:contentDescription="@string/source_image" />

                <TextView
                    android:id="@+id/tripDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/_1"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/busRouteRecyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boardingArea"
                    android:ellipsize="end"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/travelsNameRecyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/srs_travels"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/confirmation"
                    android:layout_marginTop="@dimen/marginStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:text="@string/confirmed"/>

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>