<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.SelectedTripFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/marginStart">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginStart"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginStart"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginStart">

                    <TextView
                        android:id="@+id/busNameSelectedTrip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_toEndOf="@+id/ratingsLinearLayout"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/srs_travels"
                        android:textSize="@dimen/textSize"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />

                    <LinearLayout
                        android:id="@+id/ratingsLinearLayout"
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:background="@color/green"
                        android:gravity="end">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/star"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSize" />

                        <Button
                            android:id="@+id/busRatingSelectedTrip"
                            android:layout_width="35dp"
                            android:layout_height="20dp"
                            android:background="@android:color/transparent"
                            android:text="@string/_4_2"
                            android:textColor="@color/white" />

                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/boardingTimeSelectedTrip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/boardingTime"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/droppingTimeSelectedTrip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/landingTime" />

                    <TextView
                        android:id="@+id/dateSelectedTrip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/marginStart"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/date" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/boardingAreaSelectedTrip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/boardingArea" />

                    <TextView
                        android:id="@+id/droppingAreaSelectedTrip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/droppingArea" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/marginStart"
                    android:background="@color/black" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginStart"
                android:gravity="center_horizontal"
                android:text="@string/drag_to_know_about_seat_types"
                android:textAlignment="gravity" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginStart"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="@dimen/marginStart"
                            android:contentDescription="@string/seaterbeforeclick"
                            android:src="@drawable/seaterbeforeclick" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/available" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginStart"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="@dimen/marginStart"
                            android:contentDescription="@string/seaterbooked"
                            android:src="@drawable/seaterbooked" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/booked_seater" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginStart"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="@dimen/marginStart"
                            android:contentDescription="@string/seaterclicked"
                            android:src="@drawable/seaterclicked" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/clicked_seater" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginStart"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="@dimen/marginStart"
                            android:contentDescription="@string/sleeperbeforeclick"
                            android:src="@drawable/sleeperbeforeclick" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/available_sleeper" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginStart"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="@dimen/marginStart"
                            android:contentDescription="@string/sleeperbooked"
                            android:src="@drawable/sleeperbooked" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/booked_sleeper" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/marginStart"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="@dimen/marginStart"
                            android:contentDescription="@string/sleeperclicked"
                            android:src="@drawable/sleeperclicked" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/clicked_sleeper" />
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/marginStart"
                android:background="@color/black" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="50dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="7dp"
                app:cardElevation="20dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/steeringImage"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/steeringImage"
                        android:src="@drawable/steeringwheel" />

                    <View
                        android:id="@+id/lineBelowSteeringImage"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/steeringImage"
                        android:layout_marginTop="@dimen/marginStart"
                        android:background="@color/black" />

                    <LinearLayout
                        android:id="@+id/seatLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/lineBelowSteeringImage"
                        android:orientation="vertical" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/seatsSelectedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/grey"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/noOfSeatsBooked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/_1" />

            <TextView
                android:id="@+id/seatsNumbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/noOfSeatsBooked"
                android:text="@string/_1" />

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/_650"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/proceed"
            android:textColor="@color/white" />

    </LinearLayout>
</RelativeLayout>
